# Projeto_FPGA_Health_Monitoring

./: .gitignore  README.md
backup/fpga-acende-2-led-para-1-e-2/: Verifica.bat
backup/fpga-acende-2-led-para-1-e-2/Arquivos/: flash_uart.bat  projeto_top.bit  projeto_top.sv  top.lpf  uart_rx.sv  uart_tx.sv
backup/teclado_acender_led_coluna/Arquivos/: flash_uart.bat  projeto_top.sv  top.lpf
bitdoglab/InterfaceSaida_9bits/: CMakeLists.txt
bitdoglab/InterfaceSaida_9bits/inc/: aht10.h  app_display.h  display_oled.h  dma_handlers.h  handles_tarefas.h  i2c_config.h  max30102.h  oled_animacoes.h  oled_display.h  sensor_word8.h  sensors_shared.h  ssd1306_font.h  ssd1306_text.h  tarefa_display_palavra.h  tarefa_display_word_8.h  tarefa_enviar_uart.h  tarefa_max30102.h  tarefa_sensors_i2c.h  tarefa_word_8.h  tela_display.h
bitdoglab/InterfaceSaida_9bits/src/: CMakeLists.txt  aht10.c  i2c_config.c  main.c  max30102.c  numeros_display.c  oled_animacoes.c  sensor_word8.c  tarefa_display_word_8.c  tarefa_enviar_uart.c  tarefa_max30102.c  tarefa_sensors_i2c.c  tarefa_word_8.c  tela_display_.c
bitdoglab/interface/: CMakeLists.txt
bitdoglab/interface/inc/: exibicao.h  gpio_util.h  handles_tarefas.h  numeros_display.h  numeros_grandes.h  oled_context.h  tarefa_bcd8.h  tarefa_display_duplo_bcd.h  tarefa_led_verde.h  tarefa_word_9.h  tela_display.h
bitdoglab/interface/src/: CMakeLists.txt  display_oled_.c  gpio_util.c  main.c  oled_context.c  oled_display.c  ssd1306_text.c  tarefa_bcd8.c  tarefa_display_duplo_bcd.c  tarefa_led_verde.c  tarefa_word_9.c
fpga/: flash_uart.bat  fsm_menu.sv  teclado.sv  uart_colorlight_i9.lpf  uart_echo_colorlight_i9.bit  uart_echo_colorlight_i9.sv  uart_rx.sv  uart_top.sv  uart_tx.sv
fpga/Arquivos/: projeto_top.sv  top.lpf
fpga/Projeto/: Projeto.ldf
fpga/Projeto/impl1/: .build_status  Projeto_impl1.alt  Projeto_impl1.areasrr  Projeto_impl1.bgn  Projeto_impl1.bit  Projeto_impl1.edi  Projeto_impl1.mrp  Projeto_impl1.ngd  Projeto_impl1.ngo  Projeto_impl1.par  Projeto_impl1.prf  Projeto_impl1.srd  Projeto_impl1.srf  Projeto_impl1.srr.db  Projeto_impl1.twr  Projeto_impl1_bgn.html  Projeto_impl1_cck.rpt  Projeto_impl1_map.asd  message.xml  (+27 more)
(+73 files in other folders)
